; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_connection_send_control.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_btstack_hid.c_btpad_connection_send_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btstack_hid_adapter = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i64)* @btpad_connection_send_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btpad_connection_send_control(i8* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.btstack_hid_adapter*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.btstack_hid_adapter*
  store %struct.btstack_hid_adapter* %9, %struct.btstack_hid_adapter** %7, align 8
  %10 = load %struct.btstack_hid_adapter*, %struct.btstack_hid_adapter** %7, align 8
  %11 = icmp ne %struct.btstack_hid_adapter* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %3
  %13 = load %struct.btstack_hid_adapter*, %struct.btstack_hid_adapter** %7, align 8
  %14 = getelementptr inbounds %struct.btstack_hid_adapter, %struct.btstack_hid_adapter* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @bt_send_l2cap_ptr(i32 %17, i32* %18, i64 %19)
  br label %21

21:                                               ; preds = %12, %3
  ret void
}

declare dso_local i32 @bt_send_l2cap_ptr(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
